# racer

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml  rust-toolchain  rust-toolchain.toml  src.rs  src2.rs
.github/workflows/: ci.yml
benches/: bench.rs  bench_extern.rs  bench_globs.rs  bench_stdlibs.rs
editors/: racer-autocomplete.el  racer.el  racer.vim
editors/emacs/: Cask  Makefile  company-racer.el  racer.el
interner/: Cargo.toml
interner/src/: lib.rs
metadata/: Cargo.toml  test-data-full.json  test-data-no-deps.json
metadata/src/: lib.rs  mapping.rs  metadata.rs
metadata/tests/: from_json.rs  manifest.rs  self_test.rs
plugin/: racer.vim
rplugin/python3/deoplete/sources/: racer.py
src/: ast.rs  codecleaner.rs  codeiter.rs  lib.rs  main.rs  notes  racer.rs  resolve.rs  scopes.rs  test.rs  testutils.rs
src/racer/: ast.rs  ast_types.rs  bench.rs  benches.rs  byte_iter.rs  cargo.rs  codecleaner  codecleaner.rs  codeiter  codeiter.rs  config.rs  core.rs  fileres.rs  ghetto_logger.rs  lib.rs  main  matchers.rs  metadata.rs  method_info.rs  mod.rs  nameres.rs  primitive.rs  project_model.rs  resolve.rs  scopes.rs  snippets.rs  src.rs  src2.rs  test.rs  testutils.rs  typeinf.rs  typeinference.rs  util.rs
src/test_fixtures/: Cargo.toml
src/test_fixtures/src/: foo.rs  lib.rs
src/test_fixtures/src/submod/: bar.rs
src/test_project/: Cargo.toml
src/test_project/test_fixtures/src/: lib.rs
test_project/: Cargo.toml
test_project/src/: lib.rs  submod2018.rs
test_project/test-crate2/: Cargo.toml
test_project/test-crate2/src/: lib.rs
test_project/test-crate3/: Cargo.toml
test_project/test-crate3/src/: main.rs
test_project/test-crate4/: Cargo.toml
test_project/test-crate4/src/: lib.rs
test_project/test_fixtures/: Cargo.toml
test_project/test_fixtures/src/: foo.rs  lib.rs
test_project/test_fixtures/src/submod/: bar.rs
tests/: alias.rs  async.rs  bench.rs  binary.rs  consts.rs  external.rs  follow_self.rs  for_arg.rs  if_let.rs  index.rs  module_structure.rs  primitive.rs  struct_field.rs  system.rs  test.rs  trait_bounds.rs  try.rs  union.rs  utils.rs
testutils/: Cargo.toml
testutils/src/: lib.rs
