[package]
name = "racer"
version = "2.1.7"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>", "The Racer developpers"]
homepage = "https://github.com/racer-rust/racer"
repository = "https://github.com/racer-rust/racer"

[lib]
name = "racer"
path = "src/racer/lib.rs"

[[bin]]
name = "racer"
path = "src/bin/main.rs"
doc = false
required-features = ["metadata"]

[profile.release]
debug = true

[dependencies]
bitflags = "1.0"
log = "0.4"
rustc-ap-syntax = "263.0.0"
env_logger = "0.5"
clap = "2.32"
lazy_static = "1.0"
humantime = "1.1"
derive_more = "0.11.0"
rls-span = "0.4.0"
lazycell = {version = "1.0", optional = true}

[dependencies.racer-cargo-metadata]
version = "0.1"
optional = true
path = "metadata"

[dev-dependencies.racer-testutils]
version = "0.1"
path = "testutils"


[features]
default = ["metadata"]
metadata = ["lazycell", "racer-cargo-metadata"]
nightly = []

[workspace]
members = ["interner", "metadata", "testutils"]
