[package]
name = "racer"
version = "2.1.32"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>", "The Racer developers"]
homepage = "https://github.com/racer-rust/racer"
repository = "https://github.com/racer-rust/racer"
edition = "2018"

[lib]
name = "racer"
path = "src/racer/lib.rs"

[[bin]]
name = "racer"
path = "src/bin/main.rs"
doc = false
required-features = ["metadata"]

[profile.release]
debug = false # because of #1005

[dependencies]
bitflags = "1.0"
log = "0.4"
env_logger = "0.7.1"
clap = "2.32"
lazy_static = "1.2"
humantime = "2.0.0"
derive_more = "0.99.2"
rls-span = "0.5.1"
lazycell = { version = "1.2", optional = true }

[dependencies.racer-cargo-metadata]
version = "0.1"
optional = true
path = "metadata"

[dependencies.rustc_ast_pretty]
package = "rustc-ap-rustc_ast_pretty"
version = "651.0.0"

[dependencies.rustc_data_structures]
package = "rustc-ap-rustc_data_structures"
version = "651.0.0"

[dependencies.rustc_errors]
package = "rustc-ap-rustc_errors"
version = "651.0.0"

[dependencies.rustc_parse]
package = "rustc-ap-rustc_parse"
version = "651.0.0"

[dependencies.rustc_session]
package = "rustc-ap-rustc_session"
version = "651.0.0"

[dependencies.rustc_span]
package = "rustc-ap-rustc_span"
version = "651.0.0"

[dependencies.rustc_ast]
package = "rustc-ap-rustc_ast"
version = "651.0.0"

[dev-dependencies.racer-testutils]
version = "0.1"
path = "testutils"


[features]
default = ["metadata"]
metadata = ["lazycell", "racer-cargo-metadata"]
nightly = []

[workspace]
members = ["interner", "metadata", "testutils"]
