[package]
name = "test-crate3"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
description = "test crate for patch.crates-io"
workspace = ".."

[dependencies.rand]
version = "0.5.0"
default-features = false
features = []

[patch.crates-io.rand]
git = "https://github.com/rust-lang-nursery/rand"
rev = "ea9fc2e5357dcf5d0497aa332cd0f8050017e3ec"